--- a/test/OpenInput.Test.csproj
+++ b/test/OpenInput.Test.csproj
@@ -14,6 +14,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Remove="packages.config" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="ImGui.NET" Version="0.1.6" />
   </ItemGroup>
 
