--- a/src/OpenInput.OpenTK/OpenInput.OpenTK.csproj
+++ b/src/OpenInput.OpenTK/OpenInput.OpenTK.csproj
@@ -1,12 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFramework>netcoreapp1.0</TargetFramework>
+    <TargetFrameworks>netcoreapp1.0; net461</TargetFrameworks>
     <RootNamespace>OpenInput</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTK.NETCore" Version="1.1.2571.6431" />
+    <PackageReference Include="OpenTK.NETCore" Version="1.1.2571.6431" Condition="'$(TargetFramework)' == 'netcoreapp1.0'" />
+    <PackageReference Include="OpenTK" Version="2.0.0" Condition="'$(TargetFramework)' == 'net461'" />
   </ItemGroup>
 
   <ItemGroup>
