--- a/src/OpenInput/OpenInput.csproj
+++ b/src/OpenInput/OpenInput.csproj
@@ -1,27 +1,11 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>netcoreapp1.0; net461</TargetFrameworks>
-    <RootNamespace>OpenInput</RootNamespace>
+    <TargetFramework>netstandard1.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="OpenTK.NETCore" Version="1.1.2571.6431" Condition="'$(TargetFramework)' == 'netcoreapp1.0'" />
-    <PackageReference Include="OpenTK" Version="2.0.0" Condition="'$(TargetFramework)' == 'net461'" />
+    <PackageReference Include="System.Numerics.Vectors" Version="4.3.0" />
   </ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\OpenInput.Portable\OpenInput.Portable.csproj" />
-  </ItemGroup>
-
-  <!-- Include RawInput -->
-  <ItemGroup Condition="'$(TargetFramework)' != 'net461'">
-    <Compile Remove="RawInput\**" />
-    <None Include="RawInput\**" />
-  </ItemGroup>
-  
-  <ItemGroup Condition="'$(TargetFramework)' == 'net461'">
-    <Reference Include="System.Windows.Forms" />
-  </ItemGroup>
-  
 </Project>
