--- a/src/OpenInput.Veldrid.SDL2/OpenInput.Veldrid.SDL2.csproj
+++ b/src/OpenInput.Veldrid.SDL2/OpenInput.Veldrid.SDL2.csproj
@@ -3,7 +3,27 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>OpenInput</RootNamespace>
+    <CodeAnalysisRuleSet>../../build/Analyzers.ruleset</CodeAnalysisRuleSet>
+    <Authors>Eric Tuvesson</Authors>
+    <NeutralLanguage>en-US</NeutralLanguage>
+    <Description>A portable way of accessing HID devices for different frameworks. Targets .NET Standard 2.0</Description>
+    <Copyright>Copyright © 2019 Eric Tuvesson (erictuvesson)</Copyright>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+    <PackageId>OpenInput.Veldrid.SDL2</PackageId>
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+    <RepositoryUrl>https://github.com/erictuvesson/OpenInput</RepositoryUrl>
+    <RepositoryType>git</RepositoryType>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <PackageProjectUrl>https://github.com/erictuvesson/OpenInput</PackageProjectUrl>
+    <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <IncludeSymbols>true</IncludeSymbols>
+    <IncludeSource>true</IncludeSource>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <AdditionalFiles Include="../../build/stylecop.json" Link="stylecop.json" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Veldrid.SDL2" Version="4.6.1" />
