--- a/src/OpenInput.Veldrid.SDL2/OpenInput.Veldrid.SDL2.csproj
+++ b/src/OpenInput.Veldrid.SDL2/OpenInput.Veldrid.SDL2.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Veldrid.SDL2" Version="4.6.1" />
+    <PackageReference Include="Veldrid.SDL2" Version="4.7.0-ge562009c27" />
   </ItemGroup>
 
   <ItemGroup>
