--- a/test/OpenInput.Veldrid.SDL.Test/OpenInput.Veldrid.SDL.Test.csproj
+++ b/test/OpenInput.Veldrid.SDL.Test/OpenInput.Veldrid.SDL.Test.csproj
@@ -8,14 +8,19 @@
     <StartupObject />
   </PropertyGroup>
 
+  <PropertyGroup>
+    <DefineConstants Condition="'$(OS)' == 'Windows_NT'">WINDOWS</DefineConstants>
+    <DefineConstants Condition="'$(OS)' == 'OSX'">OSX</DefineConstants>
+  </PropertyGroup>
+  
   <ItemGroup>
     <Compile Include="..\TestContext.Veldrid.cs" Link="TestContext.Veldrid.cs" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Veldrid" Version="4.6.1" />
-    <PackageReference Include="Veldrid.ImGui" Version="5.69.0" />
-    <PackageReference Include="Veldrid.StartupUtilities" Version="4.6.1" />
+    <PackageReference Include="Veldrid" Version="4.7.0-ge562009c27" />
+    <PackageReference Include="Veldrid.ImGui" Version="5.70.0-ge562009c27" />
+    <PackageReference Include="Veldrid.StartupUtilities" Version="4.7.0-ge562009c27" />
   </ItemGroup>
 
   <ItemGroup>
