Add code style rules

--- a/.gitignore
+++ b/.gitignore
@@ -17,7 +17,7 @@
 [Rr]eleases/
 x64/
 x86/
-build/
+# build/
 bld/
 [Bb]in/
 [Oo]bj/
@@ -133,7 +133,7 @@ publish/
 # Publish Web Output
 *.[Pp]ublish.xml
 *.azurePubxml
-# TODO: Comment the next line if you want to checkin your web deploy settings 
+# TODO: Comment the next line if you want to checkin your web deploy settings
 # but database connection strings (with potential passwords) will be unencrypted
 *.pubxml
 *.publishproj
@@ -199,5 +199,6 @@ FakesAssemblies/
 # Visual Studio 6 workspace options file
 *.opt
 
-test/imgui.ini
+
 *.ini
+!stylecop.json
