--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -4,12 +4,13 @@ on: [pull_request]
 
 jobs:
   build:
-
-    runs-on: ubuntu-16.04
+    name: dotnet ${{ matrix.dotnet }} and ${{ matrix.os }}
+    runs-on: ${{ matrix.os }}
     
     strategy:
       matrix:
-        dotnet: ['2.2.103', '3.0.100-preview8-013656']
+        dotnet: ['2.2.103']
+        os: [ubuntu-latest]
     
     name: dotnet ${{ matrix.dotnet }}
     
@@ -20,8 +21,8 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: ${{ matrix.dotnet }}
-    - run: dotnet build
+      run: dotnet build
     
     - name: Run tests
-    - run: dotnet test
+      run: dotnet test
     
