--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -12,8 +12,8 @@ jobs:
     
     strategy:
       matrix:
-        dotnet: ['2.2.103', '3.0.100-preview8-013656']
-        os: [ubuntu-latest, windows-latest, macOS-latest]
+        dotnet: ['2.2.103']
+        os: [windows-latest]
     
     steps:
     - uses: actions/checkout@v1
