--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,15 +27,7 @@ jobs:
       run: nuget source Add -Name "GitHub - erictuvesson" -Source "https://nuget.pkg.github.com/erictuvesson/index.json" -UserName ${{ secrets.PACKAGE_REGISTRY_USERNAME }} -Password ${{ secrets.PACKAGE_REGISTRY_PASSWORD }}
 
     - name: Nuget Push
-      run: nuget push ./release/*.nupkg
+      run: nuget push ./release/*.nupkg -Source "GitHub - erictuvesson"
 
     - name: Nuget Push Symbols
-      run: nuget push ./release/*.snupkg
-
-    - name: Publish package
-      if: matrix.os == 'windows-latest'
-      env:
-        PACKAGE_REGISTRY_USERNAME: ${{ secrets.PACKAGE_REGISTRY_USERNAME }}
-        PACKAGE_REGISTRY_PASSWORD: ${{ secrets.PACKAGE_REGISTRY_PASSWORD }}
-      run: ./nuget/publish.bat
-      
+      run: nuget push ./release/*.snupkg -Source "GitHub - erictuvesson"
