--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Publish Package
 
 on:
   push:
@@ -12,13 +12,13 @@ jobs:
     
     steps:
     - uses: actions/checkout@v1
-    
+
     - name: Setup dotnet
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: '2.2.103'
 
-    - run: dotnet build --configuration "Release" --output ./release
+    - run: dotnet build --configuration "Release"
 
     - name: Setup Nuget.exe
       uses: warrenbuckley/Setup-Nuget@v1
@@ -27,7 +27,7 @@ jobs:
       run: nuget source Add -Name "GitHub - erictuvesson" -Source "https://nuget.pkg.github.com/erictuvesson/index.json" -UserName ${{ secrets.PACKAGE_REGISTRY_USERNAME }} -Password ${{ secrets.PACKAGE_REGISTRY_PASSWORD }}
 
     - name: Nuget Push
-      run: nuget push ./release/*.nupkg -Source "GitHub - erictuvesson"
+      run: nuget push ./build/*.nupkg -Source "GitHub - erictuvesson" --api-key ${{ secrets.PACKAGE_REGISTRY_PASSWORD }}
 
     - name: Nuget Push Symbols
-      run: nuget push ./release/*.snupkg -Source "GitHub - erictuvesson"
+      run: nuget push ./build/*.snupkg -Source "GitHub - erictuvesson" --api-key ${{ secrets.PACKAGE_REGISTRY_PASSWORD }}
