--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -1,4 +1,4 @@
-name: CI
+name: Run tests
 
 on: [pull_request]
 
@@ -19,7 +19,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: ${{ matrix.dotnet }}
-    - run: dotnet build
+    - run: dotnet build --configuration "Release"
     
     - name: Run tests
       run: dotnet test
