--- a/src/OpenInput.Veldrid.SDL2/OpenInput.Veldrid.SDL2.csproj
+++ b/src/OpenInput.Veldrid.SDL2/OpenInput.Veldrid.SDL2.csproj
@@ -19,6 +19,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <IncludeSource>true</IncludeSource>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PackageOutputPath>$(SolutionDir)build</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
