--- a/src/OpenInput/OpenInput.csproj
+++ b/src/OpenInput/OpenInput.csproj
@@ -18,6 +18,7 @@
     <IncludeSymbols>true</IncludeSymbols>
     <IncludeSource>true</IncludeSource>
     <SymbolPackageFormat>snupkg</SymbolPackageFormat>
+    <PackageOutputPath>$(SolutionDir)build</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
