--- a/src/OpenInput/OpenInput.csproj
+++ b/src/OpenInput/OpenInput.csproj
@@ -28,6 +28,7 @@
 
   <ItemGroup>
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
+    <PackageReference Include="System.Memory" Version="4.5.3" />
   </ItemGroup>
 
   <ItemGroup>
