--- a/test/OpenInput.Test/OpenInput.Test.csproj
+++ b/test/OpenInput.Test/OpenInput.Test.csproj
@@ -12,4 +12,10 @@
     <ProjectReference Include="..\..\src\OpenInput\OpenInput.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.3.0" />
+    <PackageReference Include="xunit" Version="2.2.0" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="2.2.0" />
+  </ItemGroup>
+
 </Project>
