Update debug project

--- a/src/OpenInput.Debug.ImGuiNET/OpenInput.Debug.ImGuiNET.csproj
+++ b/src/OpenInput.Debug.ImGuiNET/OpenInput.Debug.ImGuiNET.csproj
@@ -9,7 +9,7 @@
     <Description>A portable way of accessing HID devices for different frameworks. Targets .NET Standard 2.0</Description>
     <Copyright>Copyright © 2019 Eric Tuvesson (erictuvesson)</Copyright>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageId>OpenInput.Veldrid.SDL2.Debug</PackageId>
+    <PackageId>OpenInput.Debug.ImGuiNET</PackageId>
     <PackageVersion>1.0.0-rc-preview1</PackageVersion>
     <AssemblyVersion>1.0.0</AssemblyVersion>
     <RepositoryUrl>https://github.com/erictuvesson/OpenInput</RepositoryUrl>
@@ -28,12 +28,14 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Veldrid.ImGui" Version="5.70.0-ge562009c27" />
+    <PackageReference Include="ImGui.NET" Version="1.71.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\OpenInput\OpenInput.csproj" />
     <ProjectReference Include="..\OpenInput.Veldrid.SDL2\OpenInput.Veldrid.SDL2.csproj" />
   </ItemGroup>
+
+  <Import Project="..\OpenInput.Debug\OpenInput.Debug.projitems" Label="Shared" />
 
 </Project>
