Update build system

--- a/src/OpenInput.Veldrid.SDL2/OpenInput.Veldrid.SDL2.csproj
+++ b/src/OpenInput.Veldrid.SDL2/OpenInput.Veldrid.SDL2.csproj
@@ -1,26 +1,10 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>OpenInput</RootNamespace>
     <CodeAnalysisRuleSet>../../build/Analyzers.ruleset</CodeAnalysisRuleSet>
-    <Authors>Eric Tuvesson</Authors>
-    <NeutralLanguage>en-US</NeutralLanguage>
     <Description>A portable way of accessing HID devices for different frameworks. Targets .NET Standard 2.0</Description>
-    <Copyright>Copyright © 2019 Eric Tuvesson (erictuvesson)</Copyright>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageId>OpenInput.Veldrid.SDL2</PackageId>
-    <PackageVersion>2.0.0-rc-preview1</PackageVersion>
-    <AssemblyVersion>1.2.0.1</AssemblyVersion>
-    <RepositoryUrl>https://github.com/erictuvesson/OpenInput</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <PackageProjectUrl>https://github.com/erictuvesson/OpenInput</PackageProjectUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <IncludeSymbols>true</IncludeSymbols>
-    <IncludeSource>true</IncludeSource>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <PackageOutputPath>$(SolutionDir)build</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
