--- a/src/OpenInput/OpenInput.csproj
+++ b/src/OpenInput/OpenInput.csproj
@@ -1,25 +1,9 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <CodeAnalysisRuleSet>../../build/Analyzers.ruleset</CodeAnalysisRuleSet>
-    <Authors>Eric Tuvesson</Authors>
-    <NeutralLanguage>en-US</NeutralLanguage>
     <Description>A portable way of accessing HID devices for different frameworks. Targets .NET Standard 2.0</Description>
-    <Copyright>Copyright © 2019 Eric Tuvesson (erictuvesson)</Copyright>
-    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-    <PackageId>OpenInput</PackageId>
-    <PackageVersion>2.0.0-rc-preview1</PackageVersion>
-    <AssemblyVersion>1.2.0.1</AssemblyVersion>
-    <RepositoryUrl>https://github.com/erictuvesson/OpenInput</RepositoryUrl>
-    <RepositoryType>git</RepositoryType>
-    <PublishRepositoryUrl>true</PublishRepositoryUrl>
-    <PackageProjectUrl>https://github.com/erictuvesson/OpenInput</PackageProjectUrl>
-    <PackageLicenseExpression>MIT</PackageLicenseExpression>
-    <IncludeSymbols>true</IncludeSymbols>
-    <IncludeSource>true</IncludeSource>
-    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-    <PackageOutputPath>$(SolutionDir)build</PackageOutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -29,10 +13,6 @@
   <ItemGroup>
     <PackageReference Include="System.Numerics.Vectors" Version="4.5.0" />
     <PackageReference Include="System.Memory" Version="4.5.3" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19367-01" PrivateAssets="All" />
   </ItemGroup>
 
 </Project>
