--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
     - master
-    - develop
 
 jobs:
   publish:
@@ -19,7 +18,7 @@ jobs:
       with:
         dotnet-version: '2.2.103'
 
-    - run: dotnet build --configuration "Release"
+    - run: ./build/build-packages.cmd
 
     - name: Setup Nuget
       uses: warrenbuckley/Setup-Nuget@v1
@@ -28,7 +27,7 @@ jobs:
       run: nuget source Add -Name "GitHub - erictuvesson" -Source "https://nuget.pkg.github.com/erictuvesson/index.json" -UserName ${{ secrets.PACKAGE_REGISTRY_USERNAME }} -Password ${{ secrets.PACKAGE_REGISTRY_PASSWORD }}
 
     - name: Nuget Push
-      run: nuget push d:\a\OpenInput\OpenInput\build\*.nupkg -Source "GitHub - erictuvesson"
+      run: nuget push d:\a\OpenInput\OpenInput\bin\Packages\Release\*.nupkg -Source "GitHub - erictuvesson"
 
     - name: Nuget Push Symbols
-      run: nuget push d:\a\OpenInput\OpenInput\build\*.snupkg -Source "GitHub - erictuvesson"
+      run: nuget push d:\a\OpenInput\OpenInput\bin\Packages\Release\*.snupkg -Source "GitHub - erictuvesson"
