--- a/src/Mallos.Input.Veldrid.SDL2/Mallos.Input.Veldrid.SDL2.csproj
+++ b/src/Mallos.Input.Veldrid.SDL2/Mallos.Input.Veldrid.SDL2.csproj
@@ -1,7 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.2</TargetFramework>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <RootNamespace>Mallos.Input</RootNamespace>
     <CodeAnalysisRuleSet>../../build/Analyzers.ruleset</CodeAnalysisRuleSet>
     <Description>A portable way of accessing HID devices for different frameworks. Targets .NET Standard 2.0</Description>
