--- a/src/Mallos.Input.Blazor/Mallos.Input.Blazor.csproj
+++ b/src/Mallos.Input.Blazor/Mallos.Input.Blazor.csproj
@@ -1,8 +1,16 @@
-<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
+
+  <ItemGroup>
+    <SupportedPlatform Include="browser" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="5.0.6" />
+  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Mallos.Input\Mallos.Input.csproj" />
