--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,8 +7,13 @@ on:
 
 jobs:
   publish:
-    name: Publish Packages
+    name: Publish Packages / dotnet ${{ matrix.dotnet }} and ${{ matrix.os }}
     runs-on: windows-latest
+    
+    strategy:
+      matrix:
+        dotnet: ['5.0.x']
+        os: [windows-latest]
 
     steps:
     - uses: actions/checkout@v1
@@ -16,7 +21,7 @@ jobs:
     - name: Setup dotnet
       uses: actions/setup-dotnet@v1
       with:
-        dotnet-version: '2.2.103'
+        dotnet-version: ${{ matrix.dotnet }}
 
     - run: ./build/build-packages.cmd
 
