--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -9,7 +9,7 @@ jobs:
     
     strategy:
       matrix:
-        dotnet: ['2.2.103']
+        dotnet: ['5.0.x']
         os: [ubuntu-latest]
 
     steps:
@@ -19,6 +19,7 @@ jobs:
       uses: actions/setup-dotnet@v1
       with:
         dotnet-version: ${{ matrix.dotnet }}
+
     - run: dotnet build --configuration "Release"
     
     - name: Run tests
