--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -35,11 +35,11 @@
     <AllowedOutputExtensionsInPackageBuildOutputFolder>$(AllowedOutputExtensionsInPackageBuildOutputFolder);.pdb</AllowedOutputExtensionsInPackageBuildOutputFolder>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0-beta2-19270-01" PrivateAssets="All"/>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All"/>
   </ItemGroup>
 
   <PropertyGroup>
-    <NerdbankGitVersioningVersion>3.0.25</NerdbankGitVersioningVersion>
+    <NerdbankGitVersioningVersion>3.4.194</NerdbankGitVersioningVersion>
   </PropertyGroup>
 
   <ItemGroup>
