--- a/src/Mallos.Input.Blazor/Mallos.Input.Blazor.csproj
+++ b/src/Mallos.Input.Blazor/Mallos.Input.Blazor.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Razor">
 
   <PropertyGroup>
+    <IsPackable>true</IsPackable>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
