--- a/src/Mallos.Input.Veldrid.SDL2/Mallos.Input.Veldrid.SDL2.csproj
+++ b/src/Mallos.Input.Veldrid.SDL2/Mallos.Input.Veldrid.SDL2.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <IsPackable>true</IsPackable>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <RootNamespace>Mallos.Input</RootNamespace>
     <CodeAnalysisRuleSet>../../build/Analyzers.ruleset</CodeAnalysisRuleSet>
