--- a/.github/workflows/publish-public.yaml
+++ b/.github/workflows/publish-public.yaml
@@ -15,23 +15,25 @@ jobs:
         configuration: ['Release']
 
     steps:
-      - name: Checkout 🛎
-        uses: actions/checkout@v2.3.4
-          
-      - name: Setup dotnet env 🏗
-        uses: actions/setup-dotnet@v1.8.0
-        with:
-          dotnet-version: ${{ matrix.dotnet }}
+    - name: Checkout 🛎
+      uses: actions/checkout@v2.3.4
+      with:
+        fetch-depth: 0
+        
+    - name: Setup dotnet env 🏗
+      uses: actions/setup-dotnet@v1.8.0
+      with:
+        dotnet-version: ${{ matrix.dotnet }}
 
-      - name: Install dependencies 👨🏻‍💻
-        run: dotnet restore
+    - name: Install dependencies 👨🏻‍💻
+      run: dotnet restore
 
-      - name: Run build 🛠
-        run: dotnet build --nologo --configuration ${{ matrix.configuration }}
+    - name: Run build 🛠
+      run: dotnet build --nologo --configuration ${{ matrix.configuration }}
 
-      - name: Run tests 🧪
-        run: dotnet test --nologo --configuration ${{ matrix.configuration }}
-   
+    - name: Run tests 🧪
+      run: dotnet test --nologo --configuration ${{ matrix.configuration }}
+  
   publish:
     runs-on: ${{ matrix.os }}
     needs: tests
@@ -44,6 +46,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2.3.4
+      with:
+        fetch-depth: 0
 
     - name: Setup dotnet
       uses: actions/setup-dotnet@v1
