--- a/.github/workflows/publish-public.yaml
+++ b/.github/workflows/publish-public.yaml
@@ -28,7 +28,7 @@ jobs:
       run: dotnet pack -c ${{ matrix.configuration }} -p:publicRelease=true
 
     - name: Publish NuGet Packages to GitHub
-      run: dotnet nuget push ./bin/Packages/Mallos.Input.*.nupkg --skip-duplicate --no-symbols true -s https://nuget.pkg.github.com/mallos/index.json -k ${{ secrets.GITHUB_TOKEN }}
+      run: dotnet nuget push ./bin/Packages/${{ matrix.configuration }}/Mallos.Input.*.nupkg --skip-duplicate --no-symbols true -s https://nuget.pkg.github.com/mallos/index.json -k ${{ secrets.GITHUB_TOKEN }}
 
     - name: Publish NuGet Packages to NuGet
-      run: dotnet nuget push ./bin/Packages/Mallos.Input.*.nupkg --skip-duplicate --no-symbols true -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_TOKEN }}
+      run: dotnet nuget push ./bin/Packages/${{ matrix.configuration }}/Mallos.Input.*.nupkg --skip-duplicate --no-symbols true -s https://api.nuget.org/v3/index.json -k ${{ secrets.NUGET_TOKEN }}
