--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -15,8 +15,8 @@
     <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
     <Copyright>Copyright 2019 (c) Eric Tuvesson (erictuvesson). All rights reserved.</Copyright>
     <Authors>Eric Tuvesson</Authors>
-    <RepositoryUrl>https://github.com/erictuvesson/Mallos.Input</RepositoryUrl>
-    <PackageProjectUrl>https://github.com/erictuvesson/Mallos.Input</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/mallos/Mallos.Input</RepositoryUrl>
+    <PackageProjectUrl>https://github.com/mallos/Mallos.Input</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <NeutralLanguage>en-US</NeutralLanguage>
   </PropertyGroup>
