--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -25,8 +25,8 @@ jobs:
       with:
         node-version: '12.x'
 
-    - run: npm ci
-    - run: npm run build
+    - run: yarn install --frozen-lockfile
+    - run: yarn run build
 
     - name: Init new repo in dist folder and commit generated files
       run: |
