--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -15,15 +15,15 @@ jobs:
     strategy:
       matrix:
         os: [ubuntu-latest]
-        
+
     steps:
     - name: Checkout 🛎
-      uses: actions/checkout@v3
-        
+      uses: actions/checkout@v4
+
     - name: Generate static vuepress files
-      uses: actions/setup-node@v3.0.0
+      uses: actions/setup-node@v4
       with:
-        node-version: '12.x'
+        node-version: 18
 
     - run: yarn install --frozen-lockfile
     - run: yarn run build
@@ -38,7 +38,7 @@ jobs:
         git commit -m 'deploy'
 
     - name: Force push to destination branch
-      uses: ad-m/github-push-action@v0.6.0
+      uses: ad-m/github-push-action@v0.8.0
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: gh-pages
